/*
 Copyright 2022 The Sellfie Authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
*/

syntax = "proto3";

package pb;
option go_package = "github.com/sellfie/pb";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (Error) {}
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
  rpc DeleteUser (DeleteUserRequest) returns (Error) {}
  rpc LoginUser (LoginUserRequest) returns (Error) {}
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
  string id = 3;
  string password = 4;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
  string url = 3;
  string comment = 4;
}

message DeleteUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message Error {
  optional int32 code = 1;
  optional string message = 2;
}